--- a/_posts/2014-04-07-week11.md
+++ b/_posts/2014-04-07-week11.md
@@ -3,18 +3,53 @@ layout: default
 permalink: LIS_861_Spring_2014/week2.html
 title: Week 11 (Apr 7-Apr 13) &mdash; Usability testing &amp; assessment tools
 ---
-<p class="bold_red"><em>Due end of week:</em> Usability evaluation</p>
+<p class="bold_red"><em>Moved to following week:</em> Accessibility evaluation</p>
 <em>TBD</em>
-<!--
 #####Key questions
-#####To read/watch
-######Required
-######Optional
+> What are some specific techniques and tools you can use to answer questions about web site usability?
+
+> Given these tools, what kinds of questions can we ask?
+
+> What benefits and limitations do different usability testing tools have?
+
 #####Assignment
--->
+######Required
+* Read the Week 11 overview in Learn@UW.
+* Read [How We Do Usability Testing](http://matthew.reidsrow.com/articles/13)
+* Read [Steve Krug's usability test script](http://sensible.com/downloads-dmmt.html)
+* Read Farney and McHale, Ch. 5 and 6.
+* [Google Analytics](http://www.google.com/analytics/): read about its features, 
+  with an eye toward answering the discussion questions in the forums. Watch the
+  screencast in Learn@UW.
+* [Crazy Egg](https://www.crazyegg.com/): read about its features, try its
+  [demo](https://www.crazyegg.com/demo) (slow to load; be patient), and watch 
+  [this screencast](https://www.youtube.com/watch?v=2APO_hJpR9A) of how Khan 
+  Academy uses it
+* [Browserstack](http://www.browserstack.com/): read about its features
+  and watch [this (rather enthusiastic) screencast](https://www.youtube.com/watch?v=bfp2vt6JueQ)
+* Read about heuristics: [10 Usability Heuristics for User Interface Design](http://www.nngroup.com/articles/ten-usability-heuristics/),
+  [How to Conduct a Heuristic Evaluation](http://www.nngroup.com/articles/how-to-conduct-a-heuristic-evaluation/),
+  [Characteristics of Usability Problems Found by Heuristic Evaluation](http://www.nngroup.com/articles/usability-problems-found-by-heuristic-evaluation/)
+* Answer the Week 11 discussion questions in the forums.
+
+######Optional
+* _Rocket Surgery Made Easy_
+* The rest of McHale and Farney
+* Lehman and Nikkel
+* Incorporate Google Analytics or Crazy Egg in a page you control; play around 
+  with the dashboard and see what you can learn. (GA is free; Crazy Egg offers
+  a free trial. Both require accounts.)
+* Try out BrowserStack. (It offers a free trial, requiring an account.)
+* Usability.gov [how-to and tools section](http://www.usability.gov/how-to-and-tools/index.html)
 
 {% comment %}
-http://matthew.reidsrow.com/articles/13
-how they do usability testing
+Questions
+Pick one of the testing tools we learned about this week. What are three
+questions you *could* answer with this tool? What about three questions you 
+*couldn't* answer?
 
+Look at a library web site and identify 3 usability questions you'd like to
+answer about it.  What tool(s) would allow you to answer those questions? If
+those tools found problems, what are some specific changes you could make in
+response, assuming your data supported those changes?
 {% endcomment %}
