--- a/_posts/2014-01-21-week1.md
+++ b/_posts/2014-01-21-week1.md
@@ -11,7 +11,7 @@ title: Week 1 (Jan 21-Jan 26) &mdash; HTML basics
 > Who's in this class with me, and what are we all doing here?
 
 #####To read/watch
-######Required
+__Required__  
 If needed: [Installing a text editor](https://openhatch.org/wiki/Boston_Python_Workshop_7/Friday#Goal_.232:_prepare_a_text_editor) (you can ignore the parts about Python and converting tabs to spaces)
 
 If needed: _Head First HTML_, Ch. 1
