--- a/_posts/2014-02-10-week4.md
+++ b/_posts/2014-02-10-week4.md
@@ -17,11 +17,14 @@ title: Week 4 (Feb 10-Feb 16) &mdash; Bootstrap and Responsive Web Design
 > later.)
 
 #####To read/watch
-######Required
+__Required__
+
 [Responsive Web Design](http://alistapart.com/article/responsive-web-design)  
+
 > _The_ foundational article for RWD: this is where it got started.
 
 [Bootstrap documentation](http://getbootstrap.com/)  
+
 > This is a _reference work_, so you don't need to read it comprehensively.
 > Instead, skim it (especially the Getting Started page) to learn what your
 > options are, and then solidify your understanding by building a basic Bootstrap
@@ -37,6 +40,7 @@ title: Week 4 (Feb 10-Feb 16) &mdash; Bootstrap and Responsive Web Design
 > okay.
 
 [Responsive Web Design for Libraries](http://matthew.reidsrow.com/articles/23)  
+
 > You can download the slides as PDF from this page, but you may find
 > [the SpeakerDeck version](https://speakerdeck.com/matthewreidsma/responsive-web-design-for-libraries-get-beyond-the-myth-of-the-mobile-web-1)
 > faster.
@@ -46,14 +50,16 @@ title: Week 4 (Feb 10-Feb 16) &mdash; Bootstrap and Responsive Web Design
 [Responsive Design Won’t Fix Your Content Problem](http://alistapart.com/column/responsive-design-wont-fix-your-content-problem)
 
 [Cell Internet Use 2013](http://pewinternet.org/Reports/2013/Cell-Internet.aspx)  
+
 > Read the full report, particularly the demographics of cell-mostly vs 
 > desktop-mostly users.
 
-
 [Smartphone Ownership 2013](http://pewinternet.org/Reports/2013/Smartphone-Ownership-2013.aspx)
+
 > Read the full report.
 
-######Optional
+__Optional__
+
 If you need to see CSS in action, I've made a few videos for you (screenshots
 of my applying CSS to the HTML file from week 1). 
 [CSS Selectors](https://vimeo.com/86024422), [CSS Box model](https://vimeo.com/86050364),
