--- a/_posts/2014-02-24-week6.md
+++ b/_posts/2014-02-24-week6.md
@@ -4,6 +4,7 @@ permalink: LIS_861_Spring_2014/week2.html
 title: Week 6 (Feb 24-Mar 2) &mdash; Dynamic content &amp; web programming
 ---
 #####Key questions
+
 > What is jQuery and why do we care?
 
 > How can I add some interactivity to my page with jQuery?
@@ -11,12 +12,14 @@ title: Week 6 (Feb 24-Mar 2) &mdash; Dynamic content &amp; web programming
 > How does the jQuery + CSS combination give us powerful new options?
 
 #####Readings and work
-######Required
+__Required__
+
 Read the Week 6 reading in Learn@UW (available in the Content Browser sidebar), 
 containing the How To Read Documentation video and the What is the DOM explanation.
 
 Watch [Lynda.com jQuery for Web Designers](http://www.lynda.com/jQuery-tutorials/jQuery-Web-Designers/144204-2.html): 
 Introduction, part 1 (Introducing jQuery), part 2 (Essential jQuery concepts)
+
 > You can access this via your UW account: Log in > Log in through your
 > organization or school > type __www.wisc.edu__ in the blank. If you're not
 > already logged in to wisc.edu you'll be asked to do that; otherwise it should
@@ -34,6 +37,7 @@ Read the documentation at [api.jquery.com](http://api.jquery.com) for [.slideTog
 
 Add an effect to your HTML page from Assignment 1 with jQuery, and tell us
 about it in the relevant thread of the Week 6 forum.
+
 > It can be any effect you like, and the page doesn't have to look good when
 > you're done; the goal is to make it _work_.  If you aren't sure where to start, 
 > use .toggleClass() on something that has a class already.
@@ -41,13 +45,15 @@ about it in the relevant thread of the Week 6 forum.
 Answer the "what is jQuery and why do we care" question in the Learn@UW Week 6
 forum.
 
-######Optional
+__Optional__
+
 Do you have unresolved questions or nifty insights?  Post to the 'any other 
 questions & reflections' thread.
 
 Read anything else that looks interesting on [api.jquery.com](http://api.jquery.com).
 
 Read anything that looks interesting on [learn.jquery.com](http://learn.jquery.com).
+
 > There's a ton of great info here, but it assumes that you have some programming
 > experience. You can absolutely still read it if you don't - just be prepared to
 > spend some extra time looking things up and asking questions. It's okay if it
