--- a/_posts/2014-03-10-week8.md
+++ b/_posts/2014-03-10-week8.md
@@ -4,6 +4,7 @@ permalink: LIS_861_Spring_2014/week2.html
 title: Week 8 (Mar 10-Mar 14) &mdash; Information architecture basics
 ---
 #####Key questions
+
 > How do users seek information?
 
 > What are some organizational tools that can help (or hinder!) that search?
@@ -12,8 +13,10 @@ title: Week 8 (Mar 10-Mar 14) &mdash; Information architecture basics
 > helping users find stuff?
 
 #####To read/do
-######Required
+__Required__
+
 Read:  
+
 * Morville & Rosenfeld, Chapters 1, 5, 6, 7, 20
 * Carol Kuhlthau's [Information Search Process](http://comminfo.rutgers.edu/~kuhlthau/information_search_process.htm)
 * [Card Sorting: How Many Users to Test](http://www.nngroup.com/articles/card-sorting-how-many-users-to-test/)
@@ -42,34 +45,41 @@ Forum:
   increase, or decrease, either your uncertainty or your anxiety?  Tell us about 
   it.
   
-######Optional
+__Optional__
+
 [Optimizing Websites in the Post Panda World](http://www.asis.org/Bulletin/Oct-12/OctNov12_Sweeny.html)
+
 > Toward the end, suggests some interesting and unconventional clues that may
 > help answer information needs.
 
 The rest of [<em>Prejudices and Antipathies</em>](http://www.sanfordberman.org/prejant.htm)
 
 [What Happens When Architectural Questions Are Not Asked?](http://www.asis.org/Bulletin/Apr-12/AprMay12_Haller.html)
+
 > A concrete example of how to confuse users via Facebook privacy settings.
 
 [The Design of Browsing and Berrypicking Techniques for the Online Search Interface](http://pages.gseis.ucla.edu/faculty/bates/berrypicking.html)
+
 > A classic paper on how people think when looking for information.  It challenged
 > conventional wisdom at the time, though its suggestions for how to build
 > interfaces may seem dated today.
 
 [The Anatomy of a Large-Scale Hypertextual Web Search Engine](http://infolab.stanford.edu/pub/papers/google.pdf)
+
 > A late-1990s paper on using citation analysis (discussed in the berrypicking
 > paper, above) to build a prototype search engine. Google went on to be fairly 
 > well known.
 
 [Folksonomies? How about Metadata Ecologies?](http://louisrosenfeld.com/home/bloug_archive/000330.html)
 and [folksonomies + controlled vocabularies](http://many.corante.com/archives/2005/01/07/folksonomies_controlled_vocabularies.php)
+
 > Eminent information architect Louis Rosenfeld and internet theorist Clay
 > Shirky argue about the relative values of controlled vocabularies and 
 > folksonomies (vocabularies for organization that emerge from user-defined 
 > labels).
 
 [Any Wikipedia page](http://en.wikipedia.org/wiki/Special:Random)
+
 > What tools are here to organize information? (Be sure to look at sidebars, if
 > any; tabs; and whatever's toward the bottom of the page. What categories is the
 > page part of? What does Wikipedia tell us about its context or provenance?)
