--- a/_posts/2014-03-24-week9.md
+++ b/_posts/2014-03-24-week9.md
@@ -5,14 +5,15 @@ title: Week 9 (Mar 24-Mar 30) &mdash; Usability basics
 ---
 <p class="bold_red"><em>Due end of week:</em> Final project one-pager</p>
 
-<em>TBD</em>
 #####Key questions
+
 > What are some key principles of usability?
 
 > What are some usability challenges faced by library web sites in particular?
 
 #####Assignment
-######Required
+__Required__
+
 Read the Week 9 Overview (located in the Learn@UW content browser).
 
 Read:
@@ -27,10 +28,12 @@ Answer the 3 discussion questions in the Week 9 forums.
 
 Keep these ideas in mind as you interact with whatever web sites you use every day.
 
-######Optional
+__Optional__
+
 The rest of Krug
 
 _The Design of Everyday Things_  
+
 > If you didn't read it in week 3 - and maybe again, if you did.
 
 The rest of Schmidt & Etches
@@ -39,15 +42,19 @@ Aaron Schmidt writes a Library Journal column on usability,
 [The User Experience](http://lj.libraryjournal.com/category/opinion/aaron-schmidt/)
 
 [http://www.usability.gov/](http://www.usability.gov/)  
+
 > Lots of useful tools.
 
 [Whitney Hess's DIY UX talk](http://www.slideshare.net/whitneyhess/diy-ux)  
+
 > An overview of the process of the process that you could use to improve
 > user experience.
 
 [Design Choices Can Cripple a Website](http://alistapart.com/article/designcancripple)  
+
 > An example of how small web design choices can have dramatic effects on task
 > completion.
 
 [Your Library Web Site Stinks And It's Your Fault](http://matthew.reidsrow.com/articles/16)  
+
 > Matthew Reidsma tells us how to make it better.
