--- a/_posts/2014-03-31-week10.md
+++ b/_posts/2014-03-31-week10.md
@@ -4,6 +4,7 @@ permalink: LIS_861_Spring_2014/week2.html
 title: Week 10 (Mar 31-Apr 6) &mdash; Scenarios &amp; personas
 ---
 #####Key questions
+
 > What's a persona?
 
 > What can personas help us achieve, and what problems can they help us avoid?
@@ -11,8 +12,10 @@ title: Week 10 (Mar 31-Apr 6) &mdash; Scenarios &amp; personas
 > What are good and bad ways to come up with personas?
 
 #####Assignment
-######Required
+__Required__
+
 Read:
+
 * The Week 10 overview (in Learn@UW)
 * Cooper, Ch. 9 (will be on course e-reserve soon)
 * [Audiences, Outcomes, and Determining User Needs](http://alistapart.com/article/audiences-outcomes-and-determining-user-needs)
@@ -22,6 +25,7 @@ Read:
 * [Dark Patterns: Deception vs. Honesty in UI Design](http://alistapart.com/article/dark-patterns-deception-vs.-honesty-in-ui-design)
 
 Also read _any one of_ the following:
+
 * Nicol and O'English, _Rising Tide: Faculty Expectations of Library Websites_
 * [Designing Web Registration Processes for Kids](http://alistapart.com/article/designing-web-registration-forms-for-kids)
 * [Children's Websites: Usability Issues in Designing for Kids](http://www.nngroup.com/articles/childrens-websites-usability-issues/)
@@ -29,7 +33,8 @@ Also read _any one of_ the following:
 
 Then answer the Week 10 Discussion Forum questions.
 
-######Optional
+__Optional__
+
 * [When to Use Which User Experience Research Methods](http://www.nngroup.com/articles/which-ux-research-methods/)
 
 > You probably won't be able to implement all of these methods, but you may find
