--- a/_posts/2014-04-07-week11.md
+++ b/_posts/2014-04-07-week11.md
@@ -4,16 +4,18 @@ permalink: LIS_861_Spring_2014/week2.html
 title: Week 11 (Apr 7-Apr 13) &mdash; Usability testing &amp; assessment tools
 ---
 <p class="bold_red"><em>Moved to following week:</em> Accessibility evaluation</p>
-<em>TBD</em>
+
 #####Key questions
+
 > What are some specific techniques and tools you can use to answer questions about web site usability?
 
 > Given these tools, what kinds of questions can we ask?
 
 > What benefits and limitations do different usability testing tools have?
 
-#####Assignment
-######Required
+##### Assignment
+__Required__
+
 * Read the Week 11 overview in Learn@UW.
 * Read [How We Do Usability Testing](http://matthew.reidsrow.com/articles/13)
 * Read [Steve Krug's usability test script](http://sensible.com/downloads-dmmt.html)
@@ -32,7 +34,8 @@ title: Week 11 (Apr 7-Apr 13) &mdash; Usability testing &amp; assessment tools
   [Characteristics of Usability Problems Found by Heuristic Evaluation](http://www.nngroup.com/articles/usability-problems-found-by-heuristic-evaluation/)
 * Answer the Week 11 discussion questions in the forums.
 
-######Optional
+__Optional__
+
 * _Rocket Surgery Made Easy_
 * The rest of McHale and Farney
 * Lehman and Nikkel
