--- a/_posts/2014-03-03-week7.md
+++ b/_posts/2014-03-03-week7.md
@@ -4,6 +4,7 @@ permalink: LIS_861_Spring_2014/week2.html
 title: Week 7 (Mar 3-Mar 9) &mdash; Dynamic content &amp; web programming
 ---
 #####Key questions
+
 > What are the Bootstrap JavaScript components, and how do they give us some new
 > options for interactivity?
 
@@ -11,8 +12,9 @@ title: Week 7 (Mar 3-Mar 9) &mdash; Dynamic content &amp; web programming
 > and trying new things?
 
 #####Assignment
-######Required
+__Required__
 Read [Bootstrap JavaScript components](http://getbootstrap.com/javascript/)  
+
 > Review last weeks' How to Read Documentation video if needed.
 
 Apply a bootstrap.js effect to your HTML page.
@@ -43,21 +45,26 @@ a Final Projects thread in the Content Browser > Course-wide info area you can
 use to ask questions, propose ideas, and find teammates.
 
 Discuss the Week 7 discussion forum threads.  
+
 > Except for the questions/reflections thread, *none of these are optional*. If 
 > you're having trouble with your Bootstrap effect, posting about what you've 
 > tried and where you're stuck is a completely legitimate way to participate.
 
-######Optional
+__Optional__
+
 The rest of [Lynda.com jQuery for Web Designers](http://www.lynda.com/jQuery-tutorials/jQuery-Web-Designers/144204-2.html)
 
 [Lynda.com jQuery Essential Training](http://www.lynda.com/jQuery-tutorials/essential-training/48370-2.html)  
+
 > I found this more technical than the jQuery for Web Designers class, but you
 > may find it handy to have an additional perspective.
 
 [Building Twitter Bootstrap](http://alistapart.com/article/building-twitter-bootstrap)  
+
 > Curious how and why Twitter built Bootstrap? Here you go!
 
 [Progressive Enhancement with JavaScript](http://alistapart.com/article/progressiveenhancementwithjavascript)  
+
 > You can do lots of cool stuff with JS, but possibly at a cost: e.g. making sites
 > slower to load, or less accessible to users who have screenreaders, or who have
 > disabled JavaScript. Progressive enhancement is the idea that the bare-bones
