--- a/_posts/2014-04-14-week12.md
+++ b/_posts/2014-04-14-week12.md
@@ -3,7 +3,7 @@ layout: default
 permalink: LIS_861_Spring_2014/week2.html
 title: Week 12 (Apr 14-Apr 20) &mdash; Accessibility 1
 ---
-<p class="bold_red"><em>Moved to following week:</em> Accessibility evaluation</p>
+<p class="bold_red"><em>Due end of week:</em> Accessibility evaluation</p>
 <em>TBD</em>
 <!--
 #####Key questions
