weeks 12 and 13, ignore very large files

--- a/_posts/2014-04-14-week12.md
+++ b/_posts/2014-04-14-week12.md
@@ -1,33 +1,36 @@
 ---
 layout: default
 permalink: LIS_861_Spring_2014/week2.html
-title: Week 12 (Apr 14-Apr 20) &mdash; Accessibility 1
+title: Week 12 (Apr 14-Apr 20) &mdash; Accessibility Tools and Testing
 ---
 <p class="bold_red"><em>Due end of week:</em> Accessibility evaluation</p>
-<em>TBD</em>
-<!--
+
 #####Key questions
-#####To read/watch
-######Required
-######Optional
+
+> How might the web look different if you were navigating it with some disability
+> you don't (currently) have?
+
+> What tools can help us investigate other perspectives on the web and check for
+> accessibility problems?
+
+> What are some techniques for fixing accessibility problems?
+
 #####Assignment
--->
+_Required_
 
-{% comment %}
-Note: both Ranti and Cynthia say that making sure you followed accessibility
-guidelines does NOT mean your site is usable.
+* Read Riley-Huff
+* Read Cynthia Ng's three-part blog series on techniques for making your website
+  accessible: [Part 1](http://cynng.wordpress.com/2012/10/30/making-your-website-accessible-part-1-understanding-wcag/),
+  [Part 2](http://cynng.wordpress.com/2013/01/22/making-your-website-accessible-part-2-implementing-wcag-into-the-structure-layout/),
+  [Part 3](http://cynng.wordpress.com/2013/04/05/making-your-website-accessible-part-3-content-wcag-compliance/)
+* Read [Tools I use when performing accessibility assessment](http://blog.rantijunus.net/2014/02/02/tools-i-use-when-performing-accessibility-assessment/)
+* Watch the accessibility test screencast in Learn@UW
+* Complete and turn in the [Accessibility evaluation assignment](./assignments/accessibility_evaluation.html)
 
-Make sure to go back and reread their emails.
+_Optional_
 
-Cynthia:
-My take is that the following things must be checked, and the tools you use are a matter of preference. All of the ones Ranti recommended are good choices. I've just listed what I personally use.
-
-1. Pages should always validate (this is the most basic thing). I use w3c's validator [8] .
-2. General structure. Use WAVE toolbar's Outline view, text-only view.
-3. Colour contrast. I use Firefox's WCAG Contrast Checker. (Any contrast checker is prone to false positives though, because of the ability to layer elements.)
-4. Keyboard accessibilty. The "tab" key is your friend! On a Mac, you need to change the settings to get the proper behaviour in a browser [9]
-5. Screen reader emulation. I use Firefox's Fangs because I prefer to scan/read. When I used to have a Mac, I would also use VoiceOver to double check some things.
-
-or see http://blog.rantijunus.net/2014/02/02/tools-i-use-when-performing-accessibility-assessment/
-
-{% endcomment %}
+* Ask questions or make comments in the Week 12 forum as needed.
+* Read/skim the [WAI quick reference on How to Meet WCAG 2.0](http://www.w3.org/WAI/WCAG20/quickref/)
+  (it isn't actually quick, but it's a good reference, and you can customize it
+  to show only the areas of concern you care about, or the level of compliance
+  you're aiming for)
