--- a/_posts/2014-04-21-week13.md
+++ b/_posts/2014-04-21-week13.md
@@ -1,14 +1,53 @@
 ---
 layout: default
 permalink: LIS_861_Spring_2014/week2.html
-title: Week 13 (Apr 21-Apr 27) &mdash; Accessibility 2
+title: Week 13 (Apr 21-Apr 27) &mdash; Accessibility continued: Universal Design for People
 ---
 <p class="bold_red"><em>Due end of week:</em> Web site version 2.0</p>
-<em>TBD</em>
-<!--
 #####Key questions
-#####To read/watch
-######Required
-######Optional
+> Who are your patrons with disabilities?  What sorts of needs do they have and
+> what design choices and adaptive technologies address them?
+
+> What's universal design, and why is it a useful perspective?
+
+> What are specific examples of how these issues play out in a library context?
+
 #####Assignment
--->
+_Required_
+
+* [All Technology Is Assistive Technology: Six dispositions for designers on 
+  disability](https://medium.com/thoughtful-design/a8b9a581eb62)
+* [Principles of Universal Design](http://www.ncsu.edu/ncsu/design/cud/about_ud/udprinciples.htm) -
+  available in HTML, PDF, and text formats; read whichever you prefer
+* [Laura Kalbag - LXJS 2013 - Designing for accessibility](https://www.youtube.com/watch?v=UOM5eY5hG-Q)
+* [Disability and communication: A consideration of cross-disability communication and technology](http://dsq-sds.org/article/view/3290/3179)
+* [Deafness and the User Experience](http://alistapart.com/article/deafnessandtheuserexperience)
+* [Tending a Wild Garden: Library Web Design for Persons with Disabilities](http://ejournals.bc.edu/ojs/index.php/ital/article/view/3154/2768)
+* [An Evaluation of Finding Aid Accessibility for Screen Readers](http://ejournals.bc.edu/ojs/index.php/ital/article/view/3423)
+* [When is a PDF accessible?](http://cynng.wordpress.com/2013/08/16/when-is-a-pdf-accessible/)
+
+> You'll probably be connecting lots of patrons to lots of PDFs as a librarian, so 
+> you should know about their accessibility issues.
+
+_Optional_
+
+* [The Accessibility Project](http://a11yproject.com/)  
+* [AccessAbility: Access and Usability at Penn State: What to Fix](http://accessibility.psu.edu/whattofix)  
+
+> Reference works, in case you need to learn more on specific topics or get
+> a quick sense of things to check. The Accessibility Project is open source
+> and welcomes contributions of articles as well as code; see the
+> [issues list](https://github.com/a11yproject/a11yproject.com/issues) and
+> [contributor guidelines](https://github.com/a11yproject/a11yproject.com/blob/gh-pages/CONTRIBUTING.md)
+> if you're interested in contributing.
+
+* [Section508.gov](https://www.section508.gov/)
+
+> If you'll be implementing projects in the US public sector, you will need
+> to familiarize yourself with Section 508, which governs accessibility.
+
+* _Charles & Ray Eames: The Architect and the Painter_.
+
+> If you were intrigued by their work (referenced in the Medium article), I
+> strongly recommend this beautiful, intriguing documentary about them. A 
+> fascinating and brilliant couple.
