--- a/_posts/2014-04-21-week13.md
+++ b/_posts/2014-04-21-week13.md
@@ -4,7 +4,9 @@ permalink: LIS_861_Spring_2014/week2.html
 title: Week 13 (Apr 21-Apr 27) &mdash; Accessibility continued: Universal Design for People
 ---
 <p class="bold_red"><em>Due end of week:</em> Web site version 2.0</p>
+
 #####Key questions
+
 > Who are your patrons with disabilities?  What sorts of needs do they have and
 > what design choices and adaptive technologies address them?
 
@@ -46,7 +48,7 @@ _Optional_
 > If you'll be implementing projects in the US public sector, you will need
 > to familiarize yourself with Section 508, which governs accessibility.
 
-* _Charles & Ray Eames: The Architect and the Painter_.
+* _Eames: The Architect and the Painter_
 
 > If you were intrigued by their work (referenced in the Medium article), I
 > strongly recommend this beautiful, intriguing documentary about them. A 
