--- a/_posts/2014-04-21-week13.md
+++ b/_posts/2014-04-21-week13.md
@@ -17,6 +17,7 @@ title: Week 13 (Apr 21-Apr 27) &mdash; Universal Design for People
 #####Assignment
 _Required_
 
+* Week 13 Overview (in Learn@UW)
 * [All Technology Is Assistive Technology: Six dispositions for designers on 
   disability](https://medium.com/thoughtful-design/a8b9a581eb62)
 * [Principles of Universal Design](http://www.ncsu.edu/ncsu/design/cud/about_ud/udprinciples.htm) -
