--- a/_posts/2014-05-05-week15.md
+++ b/_posts/2014-05-05-week15.md
@@ -11,3 +11,15 @@ title: Week 15 (May 5-May 11) &mdash; Stakeholders and buy-in
 ######Optional
 #####Assignment
 -->
+
+{% comment %}
+http://ejournals.bc.edu/ojs/index.php/ital/article/view/1768/1673
+
+Look back to Mita's talk - can we reference it? (people like it!)
+
+Varnum, Ch. 4
+
+http://journal.code4lib.org/articles/8741
+
+http://journal.code4lib.org/articles/4944
+{% endcomment %}
