--- a/_posts/2014-04-28-week14.md
+++ b/_posts/2014-04-28-week14.md
@@ -3,34 +3,128 @@ layout: default
 permalink: LIS_861_Spring_2014/week2.html
 title: Week 14 (Apr 28-May 4) &mdash; Project Management
 ---
-<em>TBD</em>
-<!--
 #####Key questions
-#####To read/watch
-######Required
-######Optional
+
+> What's the agile project management method, and why do we care?
+
+> How do you run an effective meeting?
+
+> What does project management look like in library technical projects?
+
 #####Assignment
--->
+_Required_
+
+Salo, [Project Management](http://www.slideshare.net/cavlec/project-management-16606291)
+
+Waters, [How to Implement Scrum in 10 Easy Steps](http://www.allaboutagile.com/how-to-implement-scrum-in-10-easy-steps/),
+and the 10 blog posts linked from it describing those steps
+
+[Metz, LIS 861: Project Management](https://www.youtube.com/watch?v=i_H5aLx9bJg)
+
+Rogers (PowerPoint file available in Learn@UW - make sure to read the presenter
+notes)
+
+[Ballard &amp; Teague-Rector](http://crln.acrl.org/content/72/3/132.full)
+
+[Critchlow, Friedman, &amp; Suchy](http://journal.code4lib.org/articles/4642)
+
+[Glendon &amp; Baumann](http://journal.code4lib.org/articles/8652)
+
+_Optional_
+
+[Fail4Lib preconference materials](http://lanyrd.com/2013/c4l13/scbpdt/)
+
+> Want to know more about risk in project management? Discover how some library 
+> projects have failed, and what we can learn from that.
+
+[Library Project Management Toolkit](https://docs.google.com/document/d/1aCZaScfh1VsvkOH4ksZDh6exzAH7n8_mMrpnw4yINcI/edit#)
+
+> A crowdsourced reference (you can edit it!) full of info on project management
+> software, charters and one-pagers, working with stakeholders, etc.
+
+[Metz, Managing Projects Part 1](https://docs.google.com/presentation/d/1fpqmmERvJucqgD68wR99tpCrQldK3jZ7UzbDFzJ7M_E/edit#slide=id.g295026e84_00) and
+[Part 2](https://docs.google.com/presentation/d/1QYLSEM7ytla7zIUpQv-PHZ_vPqoxMVWjyTjNEa0UB78/edit#slide=id.g482df4a2_016)
+
+> This provides more specifics on how you can implement project planning, including
+> some good concrete stuff on time and budget estimation. Make sure to read the
+> presenter notes.
 
 {% comment %}
-Look for:
-Jenica's ppt on meetings
-Ken's chapter on planning a migration, or similar
-An agile overview (Rosy may find you a good one)
+Notes
+  Follow-up questions: collated questions by email is fine too
+  
+  don't forget to ask if they need help on the final project!! or would like to
+  brag, or share things they've learned.
+  
+  also, the course evaluation
 
-Rosy's talk:
-Rosy will talk about meetings - ways that people do it wrong and how you can
-do it better. It can link out to lots of concepts, like status reports. Agile
-perspective.
+Questions
+  have them look for unifying principles in the different project management
+  approaches and tools? (agile, CR&L, one-pager...) or maybe comment on how
+  agile is different from what they might have seen, and why that matters?
+  
+  have them analyze a memorable meeting - what worked? what didn't? what could
+  you improve? (feel free to change the names and identifying details; it could
+  be one you chaired or one you participated in) (maybe ask about how the process
+  in general could have been better, but also about how their role could have been)
+  
+  how did people discover they needed more formal project management? what
+  benefits did it bring? (what costs does it have?)
 
-Follow-up questions:
-appear.in or similar is fine -- need to think about pros and cons
-collated questions by email is fine too
+Definitions
+  agile, scrum
+  define ScrumMaster
+  define "Non-functional requirements"
+  (daily) stand-up meeting
+  define, and diss, Waterfall model
+  scope creep
+
+Points to bring out
+doing the work is easier than agreeing on WHAT work needs to be done
+
+  communication and stakeholders
+    "you must align your development team with the business." - rephrase in library
+    terms, and point out that this helps with communication (scrum posts)
+    "trusting the work to a small team only works if the process is very transparent 
+    throughout the project." (c&rl news)
+    "Before you start a redesign project invest time in training, virtual seminars, 
+    discussions, etc., to cultivate true UX thinking throughout the organization"
+    this and the bits about top-level management support look ahead to buy-in
+    (c&rl news)
+    whiteboards, communications techs, meetings
+
+  risks and estimation
+    risks (Dorothea's notes)
+    note that software projects are notoriously hard to estimate, and software people
+    are notoriously bad at it - this contextualizes points. Amy's trivial, half-day,
+    day, week thing.
+    "Ideally task estimates should be no more than 1 day. If an estimate is much larger
+    than this, the requirements should be broken down further so the tasks are smaller."
+    important both for accuracy and for morale.
+    Sprints are SHORT compared to library timescales - talk about why.
+    really emphasize that *meetings are among the most expensive things you do*.
+  
+  team dynamics
+    "The Scrum team makes its own decisions during the Sprint. The team is empowered. 
+    Every time a manager steps in and makes a decision for the team, they remove some 
+    responsibility from the team. If a manager keeps doing this, the team gradually – 
+    piece by piece – loses ownership, along with their commitment."
+    "a large-scale redesign could not be done by committee" (C&RL News)
+    goes along with the empower-your-team parts of the Agile post
+    testing integrated throughout the process - like what Krug said about small tests
+    often. Easier, cheaper, leads to better products.
+    "daily stand-up meeting" is defined in the blog post, but emphasize 15 MINUTES MAX.
+    The Sprint Retrospective meeting is not optional.
+    
+  meetings
+    everyone has a responsibility
+
+maybe
+  5-column whiteboard system has many software implementations, e.g. Asana, Trello.
+  The physical white board is better, but you can use software if you're working
+  with a team across multiple institutions (e.g. association committee work!)
 
 Notes:
 Tie into organizational change - changing meeting styles can be disruptive.
 Look ahead to stakeholders & buy-in.
-Rosy will send me some readings.
-
-Varnum and Schmidt & Etches may both have relevant chapters to place on reserve.
 {% endcomment %}
