--- a/_posts/2014-05-05-week15.md
+++ b/_posts/2014-05-05-week15.md
@@ -3,23 +3,62 @@ layout: default
 permalink: LIS_861_Spring_2014/week2.html
 title: Week 15 (May 5-May 11) &mdash; Stakeholders and buy-in
 ---
-<em>TBD</em>
-<!--
 #####Key questions
-#####To read/watch
-######Required
-######Optional
+
+> Whom might you need to get on board when you implement a library technology 
+> project?
+
+> What obstacles might you encounter in getting buy-in?
+
+> What strategies and tactics can you use to build an effective, two-way
+> communications strategy that lets you get good technology work done?
+
 #####Assignment
--->
+_Required_
+
+* Read the Week 15 overview in Learn@UW. 
+* Watch the embedded video and read the linked documents.
+* Answer the two discussion forum questions.
+* Don't forget about your [final project](./assignments/final_project.html) and 
+  your [failure assessment](./assignments/failure_assessment.html), due at the end 
+  of next week!
 
 {% comment %}
-http://ejournals.bc.edu/ojs/index.php/ital/article/view/1768/1673
 
-Look back to Mita's talk - can we reference it? (people like it!)
+Talk about failure evaluation! Allocate time.
 
-Varnum, Ch. 4
+Questions
+  1) There have been particular sources we've kept coming back to throughout
+  this course. Anything technological changes fast, so it's important to know
+  where to look to find out current best practices for any kind of tech project,
+  and to keep your own skills up to date.
+  
+  I want you to collectively create a well-organized list of sources
+  to follow to keep your knowledge up-to-date.  Think broadly about this -
+  professional literature? Non-LIS publications? Conferences? Blogs? Social media 
+  accounts of experts? Hashtags?
+  
+  Create it in this world-editable google doc. I've placed this outside of
+  Learn@UW so you will be able to consult it after the course is over.
 
-http://journal.code4lib.org/articles/8741
+  2) Answer one of the following - NOT one already answered by one of your 
+  final project teammates:
+    * What stakeholders would you need buy-in from if you were implementing this
+      project?
+    * What might you need to educate people about before you could make these
+      changes?
+    * What are the key arguments you would make in favor of this project? State
+      them _concisely_ and without jargon.
+    * What are milestones in this project when you'd definitely want to share
+      your status with stakeholders?
+    * What obstacles might you encounter in implementing this project? (Be 
+      concrete: tie the general ideas we've seen this week to specifics about
+      _your_ project.)
+    * What kinds of institutional backing might you need to implement this 
+      project beyond the prototype level? Think broadly and concretely:
+      Funding (how much)? Training (what skills)? Hardware or software (which)?
+      Staff time (whose and how much)?  High-level sponsorship (whose)?
 
-http://journal.code4lib.org/articles/4944
+  Feel free to engage with others' answers (whether to augment them, high-five
+  the authors, or disagree) after you've posted your own.
 {% endcomment %}
